--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -17,13 +17,14 @@
 
   --arredondamento: 0.25rem;
 
-  font-family: var(--font-body);
+  /* font-family: var(--font-body); */
   color: var(--color-text);
 }
 
 *,
 *::after {
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 p {
   margin: 0;
