Tirar limite de tamanho da pagina

--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -46,7 +46,7 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%;
-  max-width: 1080px;
+  /* max-width: 1080px; */
 }
 
 .section-header,
