--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -64,6 +64,51 @@ body {
 #chats {
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+#aviso-container {
+  display:flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+#aviso {
+  background-color: white;
+  padding: 1rem;
+  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
+
+}
+
+#aviso-container.hidden {
+  pointer-events: none;
+}
+
+@keyframes popup {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+@keyframes popdown {
+  0% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+}
+
+#aviso-container.hidden > * {
+  /* opacity: 0; */
+  animation: popdown 250ms;
 }
 
 #img-curr-chat {
