--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -67,7 +67,7 @@ body {
   position: relative;
 }
 #aviso-container {
-  display:flex;
+  display: flex;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -79,7 +79,6 @@ body {
   background-color: white;
   padding: 1rem;
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
-
 }
 
 #aviso-container.hidden {
@@ -108,7 +107,17 @@ body {
 
 #aviso-container.hidden > * {
   /* opacity: 0; */
-  animation: popdown 250ms ;
+  animation: popdown 250ms;
+  transform: translateY(100%);
+  opacity: 0;
+}
+
+.notransition * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important;
+  animation: none !important;
 }
 
 #img-curr-chat {
