--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -65,6 +65,7 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
+  padding:var(--small-padding);
 }
 #aviso-container {
   display: flex;
@@ -150,8 +151,7 @@ body {
   justify-content: center;
 }
 
-#curr-chat-messages-holder,
-#chats-holder {
+#curr-chat-messages-holder {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -160,6 +160,12 @@ body {
   padding: var(--small-padding);
 
   overflow-x: hidden;
+}
+
+#chats-holder {
+  display:flex;
+  flex-direction: column;
+  gap: var(--small-padding)
 }
 
 @keyframes new-message-right {
@@ -245,7 +251,7 @@ button:hover {
 }
 
 #chats-holder {
-  padding: var(--default-padding);
+  /* padding: var(--default-padding); */
 }
 
 .chat-card {
@@ -284,7 +290,7 @@ button:hover {
 .chat-card-status {
 }
 
-#chat-search-holder {
+#chat-search-holder, #chat-create-holder {
   display: flex;
   gap: var(--small-padding);
 }
