--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -241,6 +241,7 @@ input {
   border: 0;
   border-bottom: 1px solid var(--input-border-color);
   outline: 0;
+  background-color: transparent;
 }
 
 #send-message {
