style: Suavizada cor secundaria

--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -12,7 +12,7 @@
   --cor-confirmar-high: #a0e4b2;
   --cor-em-confirmar: #0c4000;
 
-  --cor-secundaria: #eaeaea;
+  --cor-secundaria: #f4f4f4;
   --cor-secundaria-high: #c9c9c9;
 
   --arredondamento: 0.25rem;
