--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -329,3 +329,58 @@ button:hover {
   display: flex;
   gap: var(--small-padding);
 }
+
+#perfil-chat-container {
+  width: fit-content;
+  position: absolute;
+  padding: var(--small-padding);
+
+  z-index: 10;
+}
+
+#perfil-chat-container.hidden {
+  pointer-events: none;
+}
+
+#perfil-chat {
+  /* position: absolute; */
+  background-color: white;
+
+  box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.05);
+  border-radius: var(--arredondamento);
+
+  padding: var(--small-padding);
+
+  transition: 150ms;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.hidden #perfil-chat {
+  width: 0%;
+  height: 0%;
+  padding: 0%;
+
+  pointer-events: all;
+}
+
+.hidden #perfil-chat * {
+  opacity: 0%;
+}
+
+#perfil-chat-header {
+  width: fit-content;
+  min-width: 100%;
+  white-space: nowrap;
+
+  display: flex;
+  align-items: center;
+  gap: var(--small-padding);
+
+  transition: 75ms;
+}
+
+#perfil-chat-titulo {
+  font-size: 16px;
+}
