--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -16,6 +16,7 @@
   --cor-secundaria-high: #c9c9c9;
 
   --arredondamento: 0.25rem;
+  --arredondamento-m: 0.5rem;
 
   /* font-family: var(--font-body); */
   color: var(--color-text);
@@ -392,9 +393,10 @@ button:hover {
   transition: 150ms;
 }
 
-#perfil-titulo-desc-holder {
+#perfil-titulo-holder {
   width: 100%;
 }
+
 #perfil-chat-titulo {
   font-size: 16px;
 }
