--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -74,6 +74,11 @@ body {
   overflow: hidden;
   min-width: fit-content;
 }
+
+#curr-chat-messages-holder {
+  position: relative;
+}
+
 #aviso-container {
   display: flex;
   position: absolute;
