style: Quebrar texto card chat com ellipsis

--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -355,6 +355,8 @@ button:hover {
   font-weight: bold;
 }
 .chat-card-status {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #chat-search-holder,
