--- a/chatappjs/src/routes/style.css
+++ b/chatappjs/src/routes/style.css
@@ -88,7 +88,14 @@ body {
   align-items: center;
 }
 
-#aviso {
+#aviso-chat {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  gap: var(--small-padding);
+
   background-color: white;
   padding: 1rem;
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.1);
